[tool.poetry]
name = "JarvisEngine"
version = "0.0.0"
description = "The AI Engine to make J.A.R.V.I.S."
authors = ["Geson-anko <59220704+Geson-anko@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.0.0"
logging-server = {git = "https://github.com/Geson-anko/logging_server", rev = "main"}
Attr-Dict = "^1.0.0"
folder-dict = "^0.1.2"
json5 = "^0.9.6"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
decorator = "^5.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
path = ".venv"