[tool.poetry]
name = "JarvisEngine"
version = "0.1.0"
description = "The AI Engine for complex parallel process AI applications."
repository = "https://github.com/Geson-anko/JarvisEngine"
authors = ["Geson-anko <59220704+Geson-anko@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
classifiers=[
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Intended Audience :: Developers",
	"Programming Language :: Python",
	"Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"
logging-server = {git = "https://github.com/Geson-anko/logging_server", rev = "main"}
Attr-Dict = "^1.0.0"
folder-dict = "^0.1.2"
json5 = "^0.9.6"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pyproject-flake8 = "^0.0.1-alpha.4"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.960"
types-toml = "^0.10.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
path = ".venv"

[tool.black]
target-version = ['py39']
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_local_folder=['config',]
skip = [".gitignore", ".dockerignore"]
extend_skip = [".md",".json",".json5",".lock"]



[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,E501,E704,E731,F401,F403,F405,W503,"

[tool.mypy]
python_version = "3.9"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning",]